--- a/ArrayQuestions/.classpath
+++ b/ArrayQuestions/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="2D_Array"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
